--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@auth/core": "^0.8.4",
     "@auth/sveltekit": "^0.3.16",
     "@fontsource/plus-jakarta-sans": "^5.2.8",
+    "@mcp-b/transports": "^1.2.0",
+    "@modelcontextprotocol/sdk": "^1.25.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "embla-carousel-autoplay": "8.0.0-rc23",
